Use networked decks